Meta Boxes: When the metaboxes are saving ensure the overlay covers the whole area

--- a/editor/components/meta-boxes/meta-boxes-area/style.scss
+++ b/editor/components/meta-boxes/meta-boxes-area/style.scss
@@ -91,3 +91,7 @@
 		z-index: z-index( '.editor-meta-boxes-area .spinner');
 	}
 }
+
+.editor-meta-boxes-area__clear {
+	clear: both;
+}
